test/banana/typeck/should_pass/type_is_a_subtype.banana
a = RandomSource()
a.model = {
    name: "test",
    params: {
        "origin_types": {}
    },
    extra_param: 42
}

# NEW_TEST

a = RandomSource(model = {
    name: "test",
    params: {
        "origin_types": {}
    },
    extra_param: 42
})

# TYPE_TABLE_EQ {Ident< a >: RandomSource(host=TypeString,port=TypeNumber,model=TypeStruct < {name: TypeString, params: TypeStruct < {origin_types: TypeObject < {} >} >} >,alert_per_burst=TypeNumber,idle_time_between_bursts=TypeNumber)}