test/banana/typeck/should_fail/type_is_not_a_subtype.banana
a = RandomSource()
a.model = {
    params: {
        "origin_types": {}
    },
    extra_param: 42
}

# NEW_TEST

a = RandomSource(model = {
    params: {
        "origin_types": {}
    },
    extra_param: 42
})

# RAISE BananaArgumentTypeError